# FreeCAD-ellipse

./: readme-thisbranch
src/App/: Application.cpp  BodyExtension.cpp  BodyExtension.h  BodyExtensionPy.xml  CMakeLists.txt  Document.cpp  DocumentObject.cpp  DocumentObject.h  DocumentObjectPy.xml  DocumentObjectPyImp.cpp  Expression.cpp  Expression.h  ExpressionParser.l  ExpressionParser.tab.c  ExpressionParser.y  Extension.h  GeoFeatureGroupExtension.cpp  GeoFeatureGroupExtension.h  OriginGroupExtension.cpp  Part.cpp  Property.cpp  Property.h  PropertyExpressionEngine.cpp  PropertyExpressionEngine.h  PropertyLinks.cpp  PropertyLinks.h  lex.ExpressionParser.c
src/Base/: CMakeLists.txt  PyObjectBase.h
src/Gui/: Application.cpp  CMakeLists.txt  DlgSettings3DViewImp.cpp  DlgSettingsViewColor.ui  GestureNavigationStyle.cpp  GestureNavigationStyle2.cpp  GestureNavigationStyle2.h  InputField.cpp  InputField.h  NavigationStyle.cpp  NavigationStyle.h  PreCompiled.h  Selection.cpp  Selection.h  SoFCDB.cpp  SoFCSelection.cpp  SoFCSelection.h  SoFCUnifiedSelection.cpp  SoFCUnifiedSelection.h  SoTouchEvents.cpp  SoTouchEvents.h  TouchpadNavigationStyle.cpp  View3DInventorViewer.cpp  View3DInventorViewer.h  View3DViewerPy.cpp  ViewProvider.cpp  ViewProviderGeoFeatureGroupExtension.cpp  (+4 more)
src/Mod/Show/: CMakeLists.txt  Containers.py  SceneDetail.py  TVObserver.py  TVPlugin.py  TVStack.py  TempoVis.py  Utils.py  fixme.txt
src/Mod/Show/Plugins/: Camera.py  ClipPlane.py  Pickability.py  VProperty.py
src/Mod/Show/SceneDetails/: Camera.py  ClipPlane.py  Pickability.py  VProperty.py
(+215 files in other folders)
